# option-backtest

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  setup.py
example/monte_carlo/: multi_strategies.py  one_strategy.py
example/strategy/: protective_put.py  pyramid.py
notebook/play/: import_local_module.ipynb  play_polygonio.ipynb
notebook/study/: amzn.ipynb  smartphone_boom.ipynb
notebook/study/monte_carlo/: covered_call.ipynb  leg_1.ipynb  protective_put.ipynb  protective_put_vs_covered_call.ipynb
notebook/study/option/: black_scholes.ipynb  bsm_rebound_covered_call.ipynb  fake_long_call_rollover.ipynb  tsla_options_empirical.ipynb
notebook/study/options/: backtest_vectorized.ipynb  bsm_long_call.ipynb  bsm_long_call_rollover.ipynb  bsm_rebound_long_call.ipynb  rollover_options.ipynb
src/backtest/: option.py
src/option_backtest/: backtest_event.py  bt_event.py  bt_vec.py  gen_data.py  helper.py  market.py  option.py
src/option_backtest/data/: optionsdx.py
src/option_backtest/strategy/: buy_and_hold.py  protective_put.py  rebalancing.py  rollover.py  rollover_composed.py  stock_basic.py
src/option_backtest/strategy/stock/: action.py  cond.py  strategy.py
tests/: test_data_gen.py  test_gen_data.py  test_market.py  test_option.py  test_vec.py
tests/__snapshots__/: test_data_gen.ambr  test_gen_data.ambr  test_market.ambr  test_option.ambr  test_vec.ambr
