[tool.poetry]
name = "option-backtest"
version = "0.1.0"
description = ""
authors = ["WcW <1754835+w121211@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "option_backtest", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.0"
plotly = "^5.21.0"
pytest = "^8.1.1"
syrupy = "^4.6.1"
typing-extensions = "^4.11.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
nbformat = "^5.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"